добавил заголовок футер, добавил скобки, убрал пробелы в №телефоне

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </nav>
                 <ul>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
     </header>
     <main>
@@ -43,21 +43,21 @@
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./images/igor-d.jpg" alt="Игорь Демьяненко" width="270" height=260"><h3>Игорь Демьяненко</h3><p lang="en">Product Designer</p></li>
-                <li><img src="./images/olga-r.jpg" alt="Ольга Репина" width="270" height=260"><h3>Ольга Репина</h3><p lang="en">Frontend Developer</p></li>
-                <li><img src="./images/nikolai-t.jpg" alt="Николай Тарасов" width="270" height=260"><h3>Николай Тарасов</h3><p lang="en">Marketing</p></li>
-                <li><img src="./images/mihail-e.jpg" alt="Михаил Ермаков" width="270" height=260"><h3>Михаил Ермаков</h3><p lang="en">UI Designer</p></li>
+                <li><img src="./images/igor-d.jpg" alt="Игорь Демьяненко" width="270" height="260"><h3>Игорь Демьяненко</h3><p lang="en">Product Designer</p></li>
+                <li><img src="./images/olga-r.jpg" alt="Ольга Репина" width="270" height="260"><h3>Ольга Репина</h3><p lang="en">Frontend Developer</p></li>
+                <li><img src="./images/nikolai-t.jpg" alt="Николай Тарасов" width="270" height="260"><h3>Николай Тарасов</h3><p lang="en">Marketing</p></li>
+                <li><img src="./images/mihail-e.jpg" alt="Михаил Ермаков" width="270" height="260"><h3>Михаил Ермаков</h3><p lang="en">UI Designer</p></li>
             </ul>
         </section>
     </main>
     <footer>
         <section>
-            <a href="WebStudio" lang="en">WebStudio</a> 
+            <h2><a href="WebStudio" lang="en">WebStudio</a></h2>
             <address>
                 <ul>
                     <li><a href="https://goo.gl/maps/Xa4pNwq4DLPrLCQz8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </section>
