--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="WebStudio" lang="en">WebStudio</a>
+        <a href="./index.html" lang="en">WebStudio</a>
             <nav>
                 <ul>
                     <li><a href="">Студия</a></li>
@@ -33,11 +33,11 @@
                 <li><h3>Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
                 <li><h3>Современные технологии</h3><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
             </ul>
-            <h2>Чем мы занимаемся</h2>
+            <h2 hidden>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/pic-lef.jpg" alt="компьютер" width="370" height="294"></li>
-                <li><img src="./images/pic-mid.jpg" alt="телефон" width="370" height="294"></li>
-                <li><img src="./images/pic-rig.jpg" alt="планшет" width="370" height="294"></li>
+                <li><img src="./images/pic-lef.jpg" alt="написание программного кода для сайту" width="370" height="294"></li>
+                <li><img src="./images/pic-mid.jpg" alt="разработка мобильного приложения" width="370" height="294"></li>
+                <li><img src="./images/pic-rig.jpg" alt="подбор дизайнерского решения" width="370" height="294"></li>
             </ul>
         </section>
         <section>
@@ -51,8 +51,7 @@
         </section>
     </main>
     <footer>
-        <section>
-            <h2><a href="WebStudio" lang="en">WebStudio</a></h2>
+            <a href="./index.html" lang="en">WebStudio</a>
             <address>
                 <ul>
                     <li><a href="https://goo.gl/maps/Xa4pNwq4DLPrLCQz8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
@@ -60,7 +59,6 @@
                     <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
-        </section>
     </footer>
 </body>
 </html>
