--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
             <button type="button">Заказать услугу</button>
         </section>
         <section>
+            <h2 hidden>Скрытый заголовок</h2>
             <ul>
                 <li><h3>Внимание к деталям</h3><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
                 <li><h3>Пунктуальность</h3><p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
                 <li><h3>Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
                 <li><h3>Современные технологии</h3><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
             </ul>
-            <h2 hidden>Чем мы занимаемся</h2>
+        </section>
+        <section>    
+            <h2>Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/pic-lef.jpg" alt="написание программного кода для сайту" width="370" height="294"></li>
                 <li><img src="./images/pic-mid.jpg" alt="разработка мобильного приложения" width="370" height="294"></li>
